--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script>
         // URL adresa API
-        var url = 'https://zukijourney.xyzbot.net';
+        var url = 'https://api.naga.ac/v1/models';
 
         // Získání dat z API asynchronně
         fetch(url)
